fix: input on IOS issues

--- a/src/styles.css
+++ b/src/styles.css
@@ -149,6 +149,15 @@ input[type='number']::-webkit-outer-spin-button {
   transform: scale(0.8) translateY(3px);
 }
 
+input[type='text'],
+input[type='textarea'],
+input[type='email'],
+input[type='password'],
+select,
+textarea {
+  font-size: 16px !important;
+}
+
 p,
 a,
 li {
